Add: fontawesome script, header component

--- a/comfort-city/Landing.html
+++ b/comfort-city/Landing.html
@@ -25,6 +25,8 @@
 
   <script src="./assets/js/pages/landing.js"></script>
 
+  <script src="https://kit.fontawesome.com/1375b98c8d.js" crossorigin="anonymous"></script>
+
 
   <!-- Favicon
   ==================== -->
@@ -38,6 +40,8 @@
 
 <body>
 
+
+
   <!-- Nav
   ==================== -->
   <nav class="page-top-nav">
@@ -46,7 +50,7 @@
       <span class="burger__middle-line"></span>
     </div>
 
-    <div class="page-container page-top-nav__menu-container">
+    <div class="page-container _w-100 page-top-nav__menu-container">
       <div class="page-top-nav__menu">
         <ul class="page-top-nav__menu-list">
           <li class="page-top-nav__menu-item"><a href="Landing.html">Главная</a></li>
@@ -56,7 +60,39 @@
       </div>
     </div>
 
-  </nav>
+  </nav> <!-- !Nav -->
+
+
+
+  <!-- Header
+  ==================== -->
+  <header class="page-header">
+    <div class="page-header__wrapper">
+      <div class="page-container">
+        <div class="page-header__inner">
+
+          <div class="row _flex-between header__heading">
+            <div class="col">
+              <h1 class="header__title">Комфортный город</h1>
+            </div>
+            <div class="col _flex-center header__slogan">
+              <span>Наша мечта - сделать</span>
+              <h2 class="_m-0">Ваш город лучше</h2>
+            </div>
+          </div>
+
+          <div class="row _flex-center header__angle-down">
+            <div class="col">
+              <a href="#"><i class="fas fa-angle-down"></i></a>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </header> <!-- !Header -->
+
+
 
 </body>
 
