Add: new section with last solved problems with request-card component

--- a/comfort-city/Landing.html
+++ b/comfort-city/Landing.html
@@ -83,7 +83,7 @@
 
           <div class="row _flex-center header__angle-down">
             <div class="col">
-              <a href="#"><i class="fas fa-angle-down"></i></a>
+              <a href="#first-section"><i class="fas fa-angle-down"></i></a>
             </div>
           </div>
 
@@ -91,6 +91,167 @@
       </div>
     </div>
   </header> <!-- !Header -->
+
+
+
+  <!-- solved requests
+  ============================== -->
+  <section id="first-section" class="page-section solved-requests">
+    <div class="page-container">
+      <div class="solved-requests__inner">
+
+        <div class="page-section__heading">
+          <h2 class="page-section__header">Решенные проблемы</h2>
+        </div>
+
+        <div class="row _flex-center">
+
+
+
+          <!-- Request card
+          ============================== -->
+          <div class="col request-card">
+            <div class="request-card__inner">
+              <header class="request-card__preview">
+                <img class="request-card__preview-image _w-100" src="./assets/img/image_empty.jpg" alt="Preview image">
+              </header>
+              <article class="request-card__body">
+                <a class="request-card__header-link _w-100" href="#">
+                  <h3 class="request-card__header-title _my-2">Wonderful header</h3>
+                </a>
+                <p class="request-card__description _my-0">The best description in the world. You mey read it whenever
+                  you
+                  want and no one can interrupt you. I must to save your calmness. It is all what i want</p>
+              </article>
+              <footer class="row _flex-between request-card__footer">
+                <div class="col _no-gap request-card__author"><a class="request-card__author-link" href="#">FirstName
+                    LastName</a></div>
+                <div class="col _no-gap request-card__publish-date">dd.mm.yyyy</div>
+              </footer>
+            </div>
+          </div> <!-- !Request card -->
+
+          <!-- Request card
+          ============================== -->
+          <div class="col request-card">
+            <div class="request-card__inner">
+              <header class="request-card__preview">
+                <img class="request-card__preview-image _w-100" src="./assets/img/image_empty.jpg" alt="Preview image">
+              </header>
+              <article class="request-card__body">
+                <a class="request-card__header-link _w-100" href="#">
+                  <h3 class="request-card__header-title _my-2">Wonderful header</h3>
+                </a>
+                <p class="request-card__description _my-0">The best description in the world. You mey read it whenever
+                  you
+                  want and no one can interrupt you. I must to save your calmness. It is all what i want</p>
+              </article>
+              <footer class="row _flex-between request-card__footer">
+                <div class="col _no-gap request-card__author"><a class="request-card__author-link" href="#">FirstName
+                    LastName</a></div>
+                <div class="col _no-gap request-card__publish-date">dd.mm.yyyy</div>
+              </footer>
+            </div>
+          </div> <!-- !Request card -->
+
+          <!-- Request card
+          ============================== -->
+          <div class="col request-card">
+            <div class="request-card__inner">
+              <header class="request-card__preview">
+                <img class="request-card__preview-image _w-100" src="./assets/img/image_empty.jpg" alt="Preview image">
+              </header>
+              <article class="request-card__body">
+                <a class="request-card__header-link _w-100" href="#">
+                  <h3 class="request-card__header-title _my-2">Wonderful header</h3>
+                </a>
+                <p class="request-card__description _my-0">The best description in the world. You mey read it whenever
+                  you
+                  want and no one can interrupt you. I must to save your calmness. It is all what i want</p>
+              </article>
+              <footer class="row _flex-between request-card__footer">
+                <div class="col _no-gap request-card__author"><a class="request-card__author-link" href="#">FirstName
+                    LastName</a></div>
+                <div class="col _no-gap request-card__publish-date">dd.mm.yyyy</div>
+              </footer>
+            </div>
+          </div> <!-- !Request card -->
+
+          <!-- Request card
+          ============================== -->
+          <div class="col request-card">
+            <div class="request-card__inner">
+              <header class="request-card__preview">
+                <img class="request-card__preview-image _w-100" src="./assets/img/image_empty.jpg" alt="Preview image">
+              </header>
+              <article class="request-card__body">
+                <a class="request-card__header-link _w-100" href="#">
+                  <h3 class="request-card__header-title _my-2">Wonderful header</h3>
+                </a>
+                <p class="request-card__description _my-0">The best description in the world. You mey read it whenever
+                  you
+                  want and no one can interrupt you. I must to save your calmness. It is all what i want</p>
+              </article>
+              <footer class="row _flex-between request-card__footer">
+                <div class="col _no-gap request-card__author"><a class="request-card__author-link" href="#">FirstName
+                    LastName</a></div>
+                <div class="col _no-gap request-card__publish-date">dd.mm.yyyy</div>
+              </footer>
+            </div>
+          </div> <!-- !Request card -->
+
+          <!-- Request card
+          ============================== -->
+          <div class="col request-card">
+            <div class="request-card__inner">
+              <header class="request-card__preview">
+                <img class="request-card__preview-image _w-100" src="./assets/img/image_empty.jpg" alt="Preview image">
+              </header>
+              <article class="request-card__body">
+                <a class="request-card__header-link _w-100" href="#">
+                  <h3 class="request-card__header-title _my-2">Wonderful header</h3>
+                </a>
+                <p class="request-card__description _my-0">The best description in the world. You mey read it whenever
+                  you
+                  want and no one can interrupt you. I must to save your calmness. It is all what i want</p>
+              </article>
+              <footer class="row _flex-between request-card__footer">
+                <div class="col _no-gap request-card__author"><a class="request-card__author-link" href="#">FirstName
+                    LastName</a></div>
+                <div class="col _no-gap request-card__publish-date">dd.mm.yyyy</div>
+              </footer>
+            </div>
+          </div> <!-- !Request card -->
+
+          <!-- Request card
+          ============================== -->
+          <div class="col request-card">
+            <div class="request-card__inner">
+              <header class="request-card__preview">
+                <img class="request-card__preview-image _w-100" src="./assets/img/image_empty.jpg" alt="Preview image">
+              </header>
+              <article class="request-card__body">
+                <a class="request-card__header-link _w-100" href="#">
+                  <h3 class="request-card__header-title _my-2">Wonderful header</h3>
+                </a>
+                <p class="request-card__description _my-0">The best description in the world. You mey read it whenever
+                  you
+                  want and no one can interrupt you. I must to save your calmness. It is all what i want</p>
+              </article>
+              <footer class="row _flex-between request-card__footer">
+                <div class="col _no-gap request-card__author"><a class="request-card__author-link" href="#">FirstName
+                    LastName</a></div>
+                <div class="col _no-gap request-card__publish-date">dd.mm.yyyy</div>
+              </footer>
+            </div>
+          </div> <!-- !Request card -->
+
+
+        </div>
+
+      </div>
+    </div>
+  </section> <!-- !Solved requests -->
 
 
 
