--- a/merkury/landing.html
+++ b/merkury/landing.html
@@ -362,6 +362,7 @@
     </div>
   </section> <!-- !Pricing -->
 
+  <!-- Footer -->
   <footer class="footer">
     <div class="container">
       <div class="footer__inner">
@@ -383,7 +384,7 @@
         </div>
       </div>
     </div>
-  </footer>
+  </footer> <!-- !Footer -->
 
 </body>
 
