Update: Footer animation

--- a/brella/landing.html
+++ b/brella/landing.html
@@ -269,7 +269,9 @@
     </div>
   </section> <!-- !Proudly -->
 
-  <hr class="hr">
+  <section class="section section_no-gap">
+    <hr class="hr">
+  </section>
 
   <!-- Posts -->
   <section class="section posts">
@@ -313,6 +315,10 @@
       </div>
     </div>
   </section> <!-- !Action -->
+
+  <!-- Footer height -->
+  <div class="footer_height"></div>
+  <!-- !Footer height -->
 
   <!-- Footer -->
   <footer class="footer">
